[gd_scene load_steps=7 format=3 uid="uid://brujqvqnwjp0s"]

[ext_resource type="Script" path="res://scenes/game.gd" id="1_s5sn7"]
[ext_resource type="Script" path="res://scripts/choice_script.gd" id="2_6ntu6"]
[ext_resource type="AudioStream" uid="uid://cm8p0h8gcor3x" path="res://sounds/turn_key1.ogg" id="3_3pca4"]
[ext_resource type="AudioStream" uid="uid://ct5mp21muw322" path="res://sounds/nature-in-spring-in-the-city-park-with-birds-and-background-noise.ogg" id="3_ei4kb"]
[ext_resource type="AudioStream" uid="uid://ef6dueo2acqr" path="res://sounds/turn_key2.ogg" id="4_rnbbw"]
[ext_resource type="AudioStream" uid="uid://becdywfqa2las" path="res://sounds/urban-park-ambiance-loop.ogg" id="4_uyqji"]

[node name="game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s5sn7")

[node name="ChoiceScript" type="Node" parent="."]
script = ExtResource("2_6ntu6")

[node name="BackgroundColor" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.431373, 0.392157, 0.392157, 1)

[node name="PlayerValues" type="GridContainer" parent="."]
layout_mode = 1
offset_left = 10.0
offset_top = 10.0
offset_right = 77.0
offset_bottom = 87.0
columns = 2

[node name="TotalMoneyText" type="Label" parent="PlayerValues"]
layout_mode = 2
text = "Money: "

[node name="TotalMoneyValue" type="Label" parent="PlayerValues"]
layout_mode = 2

[node name="IncomeText" type="Label" parent="PlayerValues"]
layout_mode = 2
text = "Profit: "

[node name="IncomeValue" type="Label" parent="PlayerValues"]
layout_mode = 2

[node name="StockText" type="Label" parent="PlayerValues"]
layout_mode = 2
text = "Stock: "

[node name="StockValue" type="Label" parent="PlayerValues"]
layout_mode = 2

[node name="GameValues" type="GridContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -97.0
offset_top = 10.0
offset_right = -12.0
offset_bottom = 60.0
grow_horizontal = 0
columns = 2

[node name="YearText" type="Label" parent="GameValues"]
layout_mode = 2
text = "Year: "

[node name="YearValue" type="Label" parent="GameValues"]
layout_mode = 2

[node name="EnvironmentHealthText" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -78.0
offset_top = -58.0
offset_right = 78.0
offset_bottom = -35.0
grow_horizontal = 2
grow_vertical = 0
text = "Environment Health"

[node name="EnvironmentHealthValue" type="ProgressBar" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -30.0
grow_horizontal = 2
grow_vertical = 0
show_percentage = false

[node name="Intro" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="IntroText" type="RichTextLabel" parent="Intro"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -375.0
offset_top = -194.0
offset_right = 375.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
text = "You are the CEO of a multi-national food processing company. This company is one of the most profitable in the world, and as such, you will be able to make many different choices without worrying about budget. Each year, you will be presented with a problem and a choice. Your choices affect the company's total money, profit, stock price, and the environment's health.

If the environment's health reaches 0, the game ends immediately. Otherwise, the game continues until the year 2040.

You can use the hotkey [space] or [enter] for the continue button. You can use [1], [2], and [3] for choices 1, 2, and 3."

[node name="IntroButton" type="Button" parent="Intro"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -39.5
offset_top = -198.0
offset_right = 39.5
offset_bottom = -167.0
grow_horizontal = 2
grow_vertical = 0
text = "Continue"

[node name="Choice" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="ChoiceText" type="RichTextLabel" parent="Choice"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -375.0
offset_top = -174.0
offset_right = 375.0
offset_bottom = -74.0
grow_horizontal = 2
grow_vertical = 2
text = "This is an example choice."

[node name="ButtonsContainer" type="VBoxContainer" parent="Choice"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -375.0
offset_top = -24.0
offset_right = 375.0
offset_bottom = 76.0001
grow_horizontal = 2
grow_vertical = 2

[node name="ChoiceButton1" type="Button" parent="Choice/ButtonsContainer"]
layout_mode = 2

[node name="Control1" type="MarginContainer" parent="Choice/ButtonsContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ChoiceButton2" type="Button" parent="Choice/ButtonsContainer"]
layout_mode = 2

[node name="Control2" type="MarginContainer" parent="Choice/ButtonsContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ChoiceButton3" type="Button" parent="Choice/ButtonsContainer"]
layout_mode = 2

[node name="Summary" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="SummaryText" type="RichTextLabel" parent="Summary"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -375.0
offset_top = -174.0
offset_right = 375.0
offset_bottom = -74.0
grow_horizontal = 2
grow_vertical = 2
text = "This is an example summary."

[node name="ContinueButton" type="Button" parent="Summary"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -39.5
offset_top = -198.0
offset_right = 39.5
offset_bottom = -167.0
grow_horizontal = 2
grow_vertical = 0
text = "Continue"

[node name="SummaryImage" type="TextureRect" parent="Summary"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -274.0
offset_right = 100.0
offset_bottom = -74.0
grow_horizontal = 2
grow_vertical = 2
stretch_mode = 3

[node name="Ending" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 100.0
grow_horizontal = 2
grow_vertical = 2

[node name="EndingText1" type="RichTextLabel" parent="Ending"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -425.0
offset_top = -234.0
offset_right = 425.0
offset_bottom = 116.0
grow_horizontal = 2
grow_vertical = 2
text = "Throughout this game, you have played the role of a CEO operating a large company. Every choice is made to be realistic, and a choice companies make every year.

Some of these choices are a tough balance between profits and the environment. Other choices are simply low-hanging fruit for reducing carbon emissions. Unfortunately, most companies stick to the choices that keep them up with competitors no matter how detrimental they are to the environment. Harmful effects on the environment subsequently hurt companies and their potential customers in the long term.

As we head into the future and more companies commit to a net zero policy, competitors in the sector will be forced to switch as well or risk boycotts and targeted fees. However, companies that profit off of coal and natural gasses cannot be net zero by nature. The only way to reduce the environmental impact of these companies is to reduce reliance on coal and natural gasses to put them out of business.

Inspiration: Nestl√©, ExxonMobil, & Fiji Water"

[node name="EndingButton" type="Button" parent="Ending"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -48.0
offset_top = -148.0
offset_right = 48.0
offset_bottom = -117.0
grow_horizontal = 2
grow_vertical = 0
text = "Main Menu"

[node name="ChoiceButtonSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_3pca4")
volume_db = -20.0

[node name="NextButtonSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_rnbbw")
volume_db = -25.0

[node name="GoodMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_ei4kb")
volume_db = -30.0
autoplay = true

[node name="BadMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_uyqji")
volume_db = -80.0
autoplay = true

[connection signal="pressed" from="Intro/IntroButton" to="." method="_on_intro_button_pressed"]
[connection signal="pressed" from="Choice/ButtonsContainer/ChoiceButton1" to="." method="_on_choice_button_1_pressed"]
[connection signal="pressed" from="Choice/ButtonsContainer/ChoiceButton2" to="." method="_on_choice_button_2_pressed"]
[connection signal="pressed" from="Choice/ButtonsContainer/ChoiceButton3" to="." method="_on_choice_button_3_pressed"]
[connection signal="pressed" from="Summary/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="Ending/EndingButton" to="." method="_on_ending_button_pressed"]
